--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="col-md-4">
                 <div class="withdraw status">
                     <h5>Withdraw</h5>
-                    <h2>$00</h2>
+                    <h2>$ <span id="currentWithdraw">00</span></h2>
                 </div>
             </div>
             <div class="col-md-4">
@@ -89,14 +89,18 @@
         // withdraw button event handler
         const withdrawBtn = document.getElementById("addWithdraw");
         withdrawBtn.addEventListener("click", function(){
-            const withdrawNumber = getInputNumber("withdrawNumber")
-            console.log(withdraw);
-
+            const withdrawNumber = getInputNumber("withdrawAmount")
             
+
+
+            updateSpanText("currentWithdraw", withdrawNumber);
+            updateSpanText("currentBalance", -1*withdrawNumber);
+
+            document.getElementById("withdrawAmount").value = ""
             
         })
         function getInputNumber(id){
-            const withdrawAmount = document.getElementById(id).value;
+            const Amount = document.getElementById(id).value;
             const amountNumber = parseFloat(Amount);
             return amountNumber;
 
